--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -28,8 +29,6 @@
     "react-dom": "^16.4.2"
   },
   "dependencies": {
-    "@babel/cli": "^7.2.0",
-    "figlet": "^1.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.4.2"
   }
