--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.9.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
@@ -32,6 +31,7 @@
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "jest-styled-components": "^7.0.8",
     "prettier-eslint-cli": "^4.7.1",
     "react-dom": "^16.4.2",
     "stylelint": "^9.9.0",
@@ -45,6 +45,6 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.4.2",
-    "styled-components": "^4.1.1"
+    "styled-components": "^5.3.5"
   }
 }
